# daibai

./: .dockerignore  .env.example  .gitignore  =0.6.2  =2.4.0  Dockerfile  LICENSE  README.md  Untitled  daibai.yaml.example  daiby.yaml.example  pyproject.toml  requirements.txt  test  test_cosmos.py
.github/workflows/: azure-deploy.yml
daibai/: __init__.py  __main__.py
daibai/api/: __init__.py  aiohttp_tracing.py  auth.py  database.py  model_discovery.py  server.py
daibai/cli/: __init__.py  chat.py
daibai/core/: __init__.py  agent.py  cache.py  config.py  env_ready.py  guardrails.py  identity.py  instrumentation.py  metrics.py  playground_manager.py  schema.py
daibai/gui/: __init__.py
daibai/gui/static/: app.js  index.html  styles.css  verify-email.html
daibai/llm/: __init__.py  alibaba.py  anthropic_provider.py  azure.py  base.py  deepseek.py  gemini.py  groq.py  meta.py  mistral.py  nvidia.py  ollama.py  openai_compatible.py  openai_provider.py
daibai/training/: __init__.py  trainer.py
daiby/: __init__.py  __main__.py
daiby/api/: __init__.py
daiby/cli/: __init__.py  chat.py
daiby/core/: __init__.py  agent.py  config.py
daiby/gui/: __init__.py
daiby/llm/: __init__.py  anthropic_provider.py  azure.py  base.py  gemini.py  ollama.py  openai_provider.py
daiby/training/: __init__.py  trainer.py
docs/: AI_PANE_GUIDE.md  ARCHITECTURE_GUIDE.md  AUTHENTICATION_GUIIDE.md  AZURE2_GUIDE.md  AZURE_ARCHITECTURE_GUIDE.md  AZURE_GUIDE.md  DATABASE_GUIDE.md  FEATURES_GUIDE.md  FIREBASE_GUIDE.md  INSPECTOR_PANEL_GUIDE.md  INTEGRATION_GUIDE.md  MONITORING.md  PROMPT_INSPECTOR_EMITTER_GUIDE.md  SETTINGS_GUIDE.md  SHARED_SPACE_GUIDE.md  SQL_GUARDRAILS_FOR_LLM_SECURITY.md  architecture.md  gui_auth.md
docs/OBSOLETE/: AZURE_GUIDE-ORIGINAL.md
docs/mermaid/: azure2-architecture.mmd  azure2-hybrid-identity.mmd  azure2-phase1.mmd  azure2-phase2.mmd  azure2-phase3.mmd  azure2-phase4.mmd  deployment_architecture.mmd  execution_sequence.mmd  logical_architecture.mmd  security_surfaces.mmd
scripts/: azure_diag_domain.sh  azure_phase1_foundation.sh  azure_phase2_5_github.sh  azure_phase2_6_gitactions.sh  azure_phase2_registry.sh  azure_phase3_compute.sh  azure_phase4_domain.sh  check_env_ready.py  check_users.py  clean_env.py  cli.sh  firebase_admin_mgr.py  index_db.py  infra.env  keyvault_dump.py  keyvault_migrate.py  menu.sh  redis_clear.py  redis_delete.py  redis_list_keys.py  redis_test.py  setup.sh  setup_keyvault.sh  setup_redis.sh  system_reset.py  update_env.py  verify_azure_auth.py
scripts/entra/: 00_verify_tenant.sh  01_identify_directory.sh  02_list_users.sh  03_delete_single.sh  04_delete_bulk.sh  05_create_user.sh
tests/: __init__.py  conftest.py  test_agent_pruning.py  test_api.py  test_auth.py  test_auth_plane.py  test_azure_config.py  test_cache_connection.py  test_cache_logic.py  test_config.py  test_cosmos_cloud.py  test_cosmos_integration.py  test_cosmos_store.py  test_database_logic.py  test_dual_plane.py  test_env_integrity.py  test_env_ready.py  test_gemini_get_models.py  test_llm_providers.py  test_metrics.py  test_model_discovery.py  test_new_providers.py  test_redis.py  test_schema_discovery.py  test_schema_indexing.py  test_schema_mapping.py  test_semantic_cache.py  test_semantic_precision.py  test_server_lifespan.py  test_sql_guardrails.py
tests/helpers/: fake_curl_entra_e2e.py
tests/live/: test_auth_connectivity.py  test_backend_auth.py  test_entra_user_flow.py  test_gui_login_flow.py
tests/mock/: test_airgap_enforcement.py  test_config_loading.py  test_invalid_tenant.py
