[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daibai"
version = "0.1.0"
description = "AI-powered natural language database assistant with multi-LLM support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DaiBai Contributors"}
]
keywords = [
    "ai",
    "sql",
    "database",
    "llm",
    "natural-language",
    "text-to-sql",
    "gemini",
    "openai",
    "anthropic",
    "cli"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "mysql-connector-python>=8.0.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.5.0",
]
openai = [
    "openai>=1.0.0",
]
azure = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
ollama = [
    "ollama>=0.2.0",
]
# OpenAI-compatible providers (Groq, DeepSeek, Mistral, Nvidia, Alibaba, Meta) use openai SDK
groq = ["openai>=1.0.0"]
deepseek = ["openai>=1.0.0"]
mistral = ["openai>=1.0.0"]
nvidia = ["openai>=1.0.0"]
alibaba = ["openai>=1.0.0"]
meta = ["openai>=1.0.0"]
all = [
    "daibai[gemini,openai,azure,anthropic,ollama,groq,deepseek,mistral,nvidia,alibaba,meta]",
]
gui = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "websockets>=11.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
daibai = "daibai.cli.chat:main"
daibai-train = "daibai.training.trainer:main"
daibai-server = "daibai.api.server:run_server"

[project.urls]
Homepage = "https://github.com/amramedworkin/daibai"
Documentation = "https://github.com/amramedworkin/daibai#readme"
Repository = "https://github.com/amramedworkin/daibai"
Issues = "https://github.com/amramedworkin/daibai/issues"

[tool.hatch.build.targets.wheel]
packages = ["daibai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
